--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     {{ partial "script.html" . }}
-    {{ partial "katex.html" . }}
+    {{ partial "math.html" . }}
     {{ partial "google-analytics-async.html" . }}
   </body>
 </html>
