--- a/assets/css/template-styles.css
+++ b/assets/css/template-styles.css
@@ -16,7 +16,7 @@
     box-sizing: border-box;
 }
 html {
-    font-size: calc(1em + 0.33vw);
+    /* font-size: calc(1em + 0.33vw); */
     font-family: Arial, Helvetica Neue, sans-serif;
     line-height: 1.5;
     color: #111;
@@ -26,7 +26,7 @@ template {
   display: none !important;
 }
 * + * {
-    margin-top: 2.25rem;
+    margin-top: 1.25rem;
 }
 br,
 dt,
@@ -80,6 +80,10 @@ a {
 
 /* Katex math typesetting */
 .katex * {
+    margin-top: 0;
+    background-color: transparent;
+}
+.MJX-TEX * {
     margin-top: 0;
     background-color: transparent;
 }
