--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -8,15 +8,14 @@
 		tex2jax: {
 		  inlineMath: [['$','$'], ['\\(','\\)']],
 		  processEscapes: true
-		},
-	//	TeX: {
-	//		extensions: ["AMSmath.js"],
-	//		equationNumbers: {  autoNumber: "AMS"  }
-	//	}
+		}
 	});
 </script>
-<!--script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_SVG"></script-->
-<script>window.MathJax = { tex: { tags: 'ams' } }; </script>
+<script>
+  	window.MathJax = {
+		tex: { tags: 'ams' },
+	}; 
+</script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-chtml.js"></script>
 {{ end }}
