--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,10 +5,11 @@
     {{ range .Pages.ByPublishDate.Reverse }}
       <li>
         <h2>
+          {{ dateFormat "2006-01-02" .PublishDate }} |
           <a href="{{ .Permalink }}">
-            <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
+            <!--svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
-            </svg>
+            </svg-->
             {{ .Title }}
           </a>
         </h2>
