--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -3,19 +3,28 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/katex.min.js" integrity="sha384-2BKqo+exmr9su6dir+qCw08N2ZKRucY4PrGQPPWU1A7FtlCGjmEGFqXCv5nyM5Ij" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 {{ else if eq $.Site.Params.math "mathjax" }}
-<script type="text/x-mathjax-config">
-	MathJax.Hub.Config({
-		tex2jax: {
-		  inlineMath: [['$','$'], ['\\(','\\)']],
-		  processEscapes: true
-		}
-	});
-</script>
 <script>
   	window.MathJax = {
-		tex: { tags: 'ams' },
+		tex: { 
+			tags: 'ams', /* Enable automatic numbering */
+			inlineMath: [['$', '$'], ['\\(', '\\)']],
+		},
 	}; 
 </script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-chtml.js"></script>
+{{ else if eq $.Site.Params.math "mathjax-v2"}}
+<script type="text/x-mathjax-config">
+	MathJax.Hub.Config({
+	  	tex2jax: {
+			inlineMath: [['$','$'], ['\\(','\\)']],
+			processEscapes: true
+	  	},
+		TeX: {
+	  		extensions: ["AMSmath.js"],
+	  		equationNumbers: {  autoNumber: "AMS"  }
+		}
+	});
+</script>
+<script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_SVG"></script>
 {{ end }}
