--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -15,6 +15,7 @@
     </div>
     {{ partial "script.html" . }}
     {{ partial "math.html" . }}
+    {{ partial "mermaid.html" . }}
     {{ partial "google-analytics-async.html" . }}
   </body>
 </html>
