--- a/layouts/partials/mermaid.html
+++ b/layouts/partials/mermaid.html
@@ -1,9 +1,9 @@
 <script src="https://unpkg.com/mermaid@8.5.0/dist/mermaid.min.js"></script>
 <script>
-    var x = document.getElementsByClassName(" language-mermaid");
-    var n = x.length;
-    for(i = 0; i < n; i += 1) {
-        x[0].className = 'mermaid';
-    }
+    // var x = document.getElementsByClassName(" language-mermaid");
+    // var n = x.length;
+    // for(i = 0; i < n; i += 1) {
+    //     x[0].className = 'mermaid';
+    // }
     mermaid.initialize({startOnLoad:true});
 </script>x
