--- a/assets/css/template-styles.css
+++ b/assets/css/template-styles.css
@@ -128,6 +128,11 @@ div#social {
 .MathJax_MenuItem {
     margin-top: 0;
 }
+/* Fix */
+mjx-container[jax="CHTML"][display="true"] {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
 
 /* Fix for IE :( */
 [tabindex="-1"]:focus,
