--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -8,11 +8,14 @@
 		tex: { 
 			tags: 'ams', /* Enable automatic numbering */
 			inlineMath: [['$', '$'], ['\\(', '\\)']],
+			macros: {
+    			bm: ["{\\boldsymbol #1}",1],
+  			}
 		},
 	}; 
 </script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-chtml.js"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 {{ else if eq $.Site.Params.math "mathjax-v2"}}
 <script type="text/x-mathjax-config">
 	MathJax.Hub.Config({
