--- a/layouts/partials/math.html
+++ b/layouts/partials/math.html
@@ -4,30 +4,30 @@
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 {{ else if eq $.Site.Params.math "mathjax" }}
 <script>
-  	window.MathJax = {
-		tex: { 
-			tags: 'ams', /* Enable automatic numbering */
-			inlineMath: [['$', '$'], ['\\(', '\\)']],
-			macros: {
-    			bm: ["{\\boldsymbol #1}",1],
-  			}
-		},
-	}; 
+      window.MathJax = {
+        tex: { 
+            tags: 'ams', /* Enable automatic numbering */
+            inlineMath: [['$', '$'], ['\\(', '\\)']],
+            macros: {
+                bm: ["{\\boldsymbol{#1}}",1],
+              }
+        },
+    }; 
 </script>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 {{ else if eq $.Site.Params.math "mathjax-v2"}}
 <script type="text/x-mathjax-config">
-	MathJax.Hub.Config({
-	  	tex2jax: {
-			inlineMath: [['$','$'], ['\\(','\\)']],
-			processEscapes: true
-	  	},
-		TeX: {
-	  		extensions: ["AMSmath.js"],
-	  		equationNumbers: {  autoNumber: "AMS"  }
-		}
-	});
+    MathJax.Hub.Config({
+          tex2jax: {
+            inlineMath: [['$','$'], ['\\(','\\)']],
+            processEscapes: true
+          },
+        TeX: {
+              extensions: ["AMSmath.js"],
+              equationNumbers: {  autoNumber: "AMS"  }
+        }
+    });
 </script>
 <script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_SVG"></script>
 {{ end }}
