--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -1,2 +1,4 @@
+{{ if ne .File.Extension  "org" }}
 <script src="{{ "js/prism.js" | absURL }}"></script>
 <script src="{{ "js/dom-scripts.js" | absURL }}"></script>
+{{ end }}
