--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,4 +1,4 @@
-{{ $headings := findRE "<h2.*?>(.|\n])+?</h2>" .Content }}
+{{ $headings := findRE "<h2.*?>(.|[\n])+?</h2>" .Content }}
 {{ if ge (len $headings) 2 }}
   <nav class="toc" aria-labelledby="toc-heading">
     <h2 id="toc-heading">Table of contents</h2>
