--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -8,12 +8,12 @@
   </button>
   {{ $current := . }}
   <ul id="patterns-list">
-  {{ range .Site.Menus.nav }}
+  {{- range .Site.Menus.nav }}
     <li class="pattern">
-      {{ $active := or ($current.IsMenuCurrent "nav" .) ($current.HasMenuCurrent "nav" .) }}
-      {{ $active = or $active (eq .Name $current.Title) }}
-      {{ $active = or $active (and (eq .Name "Blog") (eq $current.Section "post")) }}
-      {{ $active = or $active (and (eq .Name "Tags") (eq $current.Section "tags")) }}
+      {{- $active := or ($current.IsMenuCurrent "nav" .) ($current.HasMenuCurrent "nav" .) }}
+      {{- $active = or $active (eq .Name $current.Title) }}
+      {{- $active = or $active (and (eq .Name "Blog") (eq $current.Section "post")) }}
+      {{- $active = or $active (and (eq .Name "Tags") (eq $current.Section "tags")) }}
       <a href="{{ .URL }}" {{ if $active }}aria-current="page"{{ end }}>
         <svg class="bookmark-icon" aria-hidden="true" focusable="false" viewBox="0 0 40 50">
           <use xlink:href="#bookmark"></use>
@@ -21,6 +21,6 @@
         <span class="text">{{ .Name }}</span>
       </a>
     </li>
-  {{ end }}
+  {{- end }}
   </ul>
 </nav>
