--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -1,18 +1,33 @@
-{{ $headings := findRE "<h2.*?>(.|[\n])+?</h2>" .Content }}
+{{ $headings := findRE "<h[2-6].*?>(.|[\n])+?</h[2-6]>" .Content }}
 {{ if ge (len $headings) 2 }}
   <nav class="toc" aria-labelledby="toc-heading">
     <h2 id="toc-heading">Table of contents</h2>
     <ol>
-      {{ range $headings }}
-        <li>
-          {{ $id := findRE "id=\".*\"" . }}
-          {{ $id = index $id 0 }}
-          {{ $id = strings.TrimPrefix "id=\"" $id }}
-          {{ $id = strings.TrimSuffix "\"" $id }}
-          <a href="#{{ $id }}">
-            {{ . | htmlUnescape | plainify }}
-          </a>
-        </li>
+      {{- $curr := 2 -}}
+      {{- range $headings -}}
+          {{ $id := findRE "id=\".*\"" . -}}
+          {{ $id = index $id 0 -}}
+          {{ $id = strings.TrimPrefix "id=\"" $id -}}
+          {{ $id = strings.TrimSuffix "\"" $id -}}
+          {{ $level := (int (index (findRE "[2-6]" . 1) 0)) -}}
+          {{ if gt $level $curr -}}
+              {{ range (seq (sub $level $curr)) }}
+          <ol>
+              {{- end -}}
+          {{ else if lt $level $curr -}}
+              {{ range (seq (sub $curr $level)) }}
+          </ol>
+              {{- end -}}
+          {{ end }}
+          <li>
+            <a href="#{{ $id }}"> {{ . | htmlUnescape | plainify }} </a>
+          </li>
+          {{- $curr = $level -}}
+      {{ end -}}
+      {{ if gt $curr 2 -}}
+          {{ range (seq (sub $curr 2)) }}
+          </ol>
+          {{- end -}}
       {{ end }}
     </ol>
   </nav>
