--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,8 +20,10 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
 
+  {{- with .File -}}
   {{- if ne .File.Extension  "org" -}}
     <link rel="stylesheet" href="{{ "css/prism.css" | relURL }}" media="none" onload="this.media='all';">
+  {{- end -}}
   {{- end -}}
 
   {{ $templateStyles := resources.Get "css/template-styles.css" }}
